--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!--<script type="text/javascript" src="assets/javascript/wordlist.js"></script>--> <!--add wordlist-->
+    <script type="text/javascript" src="assets/javascript/hangman-stages2.js"></script>
     <script type="text/javascript" src="assets/javascript/hangman.js"></script>
 
     <title>Hangman Game by Mark Kazanski</title>
@@ -31,7 +33,7 @@
     <p>Wins: <span id="wins"></span></p>
     <p>The Word: <span id="word"></span></p>
     <p>Letters Guessed: <span id="guessed"></span></p>
-    <p>Guesses remaining: <span id="guessesLeft"></span></p>
+    <p>Guesses remaining: <span id="guesses-left"></span></p>
 </body>
 </html>
 
