--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p>Wins: <span id="wins"></span></p>
     <p>The Word: <span id="word"></span></p>
     <p>Letters Guessed: <span id="guessed"></span></p>
-    <p>Guesses remaining: <span id="guesses-left"></span></p>
+    <p>Guesses remaining: <span id="guessesLeft"></span></p>
 </body>
 </html>
 
