--- a/index.html
+++ b/index.html
@@ -19,21 +19,12 @@
     <h1>Hangman Game by Mark Kazanski</h1>
     <p>Press any key to get started.</p>
 
-    <p id="hangman-ascii">_____<br />
-        &nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br />
-        &nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;o <br />
-        &nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/|\<br />
-        &nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br />
-        &nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/ \<br />
-        _|_<br />
-        |&nbsp;&nbsp;&nbsp;&nbsp;|________<br />
-        |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br />
-        |__________|</p>
+    <p id="hangman-ascii"></p>
 
     <p>Wins: <span id="wins"></span></p>
     <p>The Word: <span id="word"></span></p>
     <p>Letters Guessed: <span id="guessed"></span></p>
-    <p>Guesses remaining: <span id="guessesLeft"></span></p>
+    <p>Guesses remaining: <span id="guesses-left"></span></p>
 </body>
 </html>
 
@@ -49,3 +40,14 @@ _|_
 |          |
 |__________|
 -->
+
+<!--_____<br />
+        &nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br />
+        &nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;o <br />
+        &nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/|\<br />
+        &nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br />
+        &nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/ \<br />
+        _|_<br />
+        |&nbsp;&nbsp;&nbsp;&nbsp;|________<br />
+        |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|<br />
+        |__________|-->
