--- a/index.html
+++ b/index.html
@@ -16,15 +16,28 @@
     <title>Hangman Game by Mark Kazanski</title>
 </head>
 <body>
-    <h1>Hangman Game by Mark Kazanski</h1>
-    <p>Press any key to get started.</p>
-
-    <p id="hangman-ascii"></p>
-
-    <p>Wins: <span id="wins"></span></p>
-    <p>The Word: <span id="word"></span></p>
-    <p>Letters Guessed: <span id="guessed"></span></p>
-    <p>Guesses remaining: <span id="guesses-left"></span></p>
+<div class="container-fluid">
+    <div class="container">
+        <div class="well">
+            <h1>Hangman Game by Mark Kazanski</h1>
+            <p id="instructions">Press any key to get started.</p>
+            <p id="notification"></p>
+            <button id="play-again">Play Again</button>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <p id="hangman-ascii"></p>
+                <p>The Word: <span id="word"></span></p>
+                <p>Letters Guessed: <span id="guessed"></span></p>
+            </div>
+            <div class="col-md-6">
+                <p>Wins: <span id="wins">0</span></p>
+               
+                <p>Guesses remaining: <span id="guesses-left"></span></p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
 
