--- a/index.html
+++ b/index.html
@@ -26,14 +26,18 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <p id="hangman-ascii"></p>
-                <p>The Word: <span id="word"></span></p>
-                <p>Letters Guessed: <span id="guessed"></span></p>
+                <div class="well gallows">
+                    <p id="hangman-ascii"></p>
+                    <p>The Word: <span id="word"></span></p>
+                    <p>Letters Guessed: <span id="guessed"></span></p>
+                </div>
             </div>
             <div class="col-md-6">
-                <p>Wins: <span id="wins">0</span></p>
-               
-                <p>Guesses remaining: <span id="guesses-left"></span></p>
+                <div class="well score">
+                    <p>Wins: <span id="wins">0</span></p>
+                
+                    <p>Guesses remaining: <span id="guesses-left"></span></p>
+                </div>
             </div>
         </div>
     </div>
